--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<a href="/oauth2/authorization/github">깃허브 로그인</a>
-<a href="/oauth2/authorization/kakao">카카오 로그인</a>
+    <div>메인입니다.</div>
 </body>
 </html>
